--- a/fr/index.html
+++ b/fr/index.html
@@ -40,9 +40,9 @@
       </div>
 
       <div class="l-splitted">
-        <h2 class="c-h2">Contact details</h2>
+        <h2 class="c-h2">Contact</h2>
         <div>
-          <p>Contactez-nous par email ou par téléphone. Réponse garantie dans les 24 heures.</p>
+          <p>Contact rapide par email ou par téléphone. Réponse garantie dans les 24 heures.</p>
           <p class="c-address">
             <address>
               Route des Pélerins, 1207<br>
