--- a/en/index.html
+++ b/en/index.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="l-splitted">
-        <h2 class="c-h2">Contact details</h2>
+        <h2 class="c-h2">Contact</h2>
         <div>
           <p>Contact us by email or by phone. We will be back to you within 24 hours.</p>
           <p class="c-address">
