CSS and structure changes

--- a/en/index.html
+++ b/en/index.html
@@ -10,56 +10,57 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Gare des glaciers - Chamonix" />
+  <meta property="og:title" content="Gare des Glaciers - Chamonix" />
   <meta property="og:description" content="A multi-purpose space for rent in Chamonix Mont-Blanc, France" />
   <meta property="og:url" content="https://www.garedesglaciers.com" />
   <meta property="og:image" content="https://www.garedesglaciers.com/img/logo.png" />
 </head>
 <body>
 
-  <div class="c-page">
-
-    <header class="c-siteheader l-splitted">
-      <h1 class="c-siteheader__title">Gare des glaciers</h1>
+  <header class="c-siteheader">
+    <div class="c-siteheader__content  l-container  l-splitted">
+      <h1 class="c-siteheader__title">Gare <span>des</span> glaciers</h1>
       <nav class="c-siteheader__nav">
         <ul class="c-lggnav">
           <li class="c-lggnav__item"><a class="c-lggnav__link  is-active" href="/en/">English</a></li>
           <li class="c-lggnav__item"><a class="c-lggnav__link" href="/fr/">French</a></li>
         </ul>
       </nav>
-    </header>
+    </div>
+  </header>
 
-    <main class="c-maincontent">
+  <main class="c-maincontent  l-container">
 
-      <div class="l-splitted">
-        <h2 class="c-h2">About</h2>
-        <div>
-          <p>The Gare des Glaciers is a multi-purpose space for rent in Chamonix Mont-Blanc, France. Ideal for group activities, it has a big loft area and can accomodate as many as 25 people to sleep.</p>
-          <p>Built for the olympic games in 1924, the Gare des Glaciers was the first cable-car station at the Aiguille du Midi. Located in the Pélerins area, you are only 10 minutes away from the city centre and have a unique view on Mont Blanc, the glacier and the sourrounding summits.</p>
-        </div>
+    <section class="l-splitted  c-contentsection">
+      <h2 class="c-h2">A propos</h2>
+      <div>
+        <p>The Gare des Glaciers is a multi-purpose space for rent in Chamonix Mont-Blanc, France. Ideal for group activities, it has a big loft area and can accomodate as many as 25 people to sleep.</p>
+        <p>Built for the olympic games in 1924, the Gare des Glaciers was the first cable-car station at the Aiguille du Midi. Located in the Pélerins area, you are only 10 minutes away from the city centre and have a unique view on Mont Blanc, the glacier and the sourrounding summits.</p>
       </div>
+    </section>
 
-      <div class="l-splitted">
-        <h2 class="c-h2">Contact</h2>
-        <div>
-          <p>Contact us by email or by phone. We will be back to you within 24 hours.</p>
-          <p class="c-address">
-            <address>
-              Route des Pélerins, 1207<br>
-              74400 Chamonix Mont-Blanc<br>
-              <a href="mailto:info@garedesglaciers.com">info@garedesglaciers.com</a><br>
-              Phone: <a href="tel:0033668342328">+33 6 68342328</a><br>
-              <a href="https://goo.gl/maps/fGzUSXnREYzb89Jq9">Get directions</a>
-            </address>
-          </p>
-        </div>
+    <section class="l-splitted  c-contentsection">
+      <h2 class="c-h2">Contact</h2>
+      <div>
+        <p>Contact us by email or by phone. We will be back to you within 24 hours.</p>
+        <p class="c-address">
+          <address>
+            Route des Pélerins, 1207<br>
+            74400 Chamonix Mont-Blanc<br>
+            <a href="mailto:info@garedesglaciers.com">info@garedesglaciers.com</a><br>
+            Téléphone: <a href="tel:0033668342328">+33 6 68342328</a><br>
+            <a href="https://goo.gl/maps/fGzUSXnREYzb89Jq9">Google maps</a>
+          </address>
+        </p>
       </div>
-    </main>
+    </section>
+  </main>
 
-    <footer class="c-sitefooter">
-      <p>&copy; 2019 - Gare des Glaciers</p>
-    </footer>
+  <footer class="c-sitefooter">
+    <div class="l-container">
+      <p class="c-sitefooter__copyright">&copy; 2019 - Gare des Glaciers</p>
+    </div>
+  </footer>
 
-  </div>
 </body>
 </html>
