--- a/fr/index.html
+++ b/fr/index.html
@@ -17,49 +17,50 @@
 </head>
 <body>
 
-  <div class="c-page">
-
-    <header class="c-siteheader l-splitted">
-      <h1 class="c-siteheader__title">Gare des glaciers</h1>
+  <header class="c-siteheader">
+    <div class="c-siteheader__content  l-container  l-splitted">
+      <h1 class="c-siteheader__title">Gare <span>des</span> glaciers</h1>
       <nav class="c-siteheader__nav">
         <ul class="c-lggnav">
           <li class="c-lggnav__item"><a class="c-lggnav__link" href="/en/">English</a></li>
           <li class="c-lggnav__item"><a class="c-lggnav__link  is-active" href="/fr/">French</a></li>
         </ul>
       </nav>
-    </header>
+    </div>
+  </header>
 
-    <main class="c-maincontent">
+  <main class="c-maincontent  l-container">
 
-      <div class="l-splitted">
-        <h2 class="c-h2">A propos</h2>
-        <div>
-          <p>La Gare des Glaciers est un espace multi-usages à louer à Chamonix Mont-Blanc. Idéal pour les groupes, il possède un grand loft vitré et peut loger confortablement jusqu'à 25 personnes.</p>
-          <p>Construite pour les jeux olympique de 1924, la gare des glaciers était le premier téléphérique de l'aiguille du midi. Situé dans le quartier des pélerins, à 10 minutes du centre de Chamonix, ce bâtiment historique offre une vue exceptionnelle sur le glacier et le massif du Mont Blanc.</p>
-        </div>
+    <section class="l-splitted  c-contentsection">
+      <h2 class="c-h2">A propos</h2>
+      <div>
+        <p>La Gare des Glaciers est un espace multi-usages à louer à Chamonix Mont-Blanc. Idéal pour les groupes, il possède un grand loft vitré et peut loger confortablement jusqu'à 25 personnes.</p>
+        <p>Construite pour les jeux olympique de 1924, la gare des glaciers était le premier téléphérique de l'aiguille du midi. Situé dans le quartier des pélerins, à 10 minutes du centre de Chamonix, ce bâtiment historique offre une vue exceptionnelle sur le glacier et le massif du Mont Blanc.</p>
       </div>
+    </section>
 
-      <div class="l-splitted">
-        <h2 class="c-h2">Contact</h2>
-        <div>
-          <p>Contact rapide par email ou par téléphone. Réponse garantie dans les 24 heures.</p>
-          <p class="c-address">
-            <address>
-              Route des Pélerins, 1207<br>
-              74400 Chamonix Mont-Blanc<br>
-              <a href="mailto:info@garedesglaciers.com">info@garedesglaciers.com</a><br>
-              Téléphone: <a href="tel:0033668342328">+33 6 68342328</a><br>
-              <a href="https://goo.gl/maps/fGzUSXnREYzb89Jq9">Google maps</a>
-            </address>
-          </p>
-        </div>
+    <section class="l-splitted  c-contentsection">
+      <h2 class="c-h2">Contact</h2>
+      <div>
+        <p>Contact rapide par email ou par téléphone. Réponse garantie dans les 24 heures.</p>
+        <p class="c-address">
+          <address>
+            Route des Pélerins, 1207<br>
+            74400 Chamonix Mont-Blanc<br>
+            <a href="mailto:info@garedesglaciers.com">info@garedesglaciers.com</a><br>
+            Téléphone: <a href="tel:0033668342328">+33 6 68342328</a><br>
+            <a href="https://goo.gl/maps/fGzUSXnREYzb89Jq9">Google maps</a>
+          </address>
+        </p>
       </div>
-    </main>
+    </section>
+  </main>
 
-    <footer class="c-sitefooter">
-      <p>&copy; 2019 - Gare des Glaciers</p>
-    </footer>
+  <footer class="c-sitefooter">
+    <div class="l-container">
+      <p class="c-sitefooter__copyright">&copy; 2019 - Gare des Glaciers</p>
+    </div>
+  </footer>
 
-  </div>
 </body>
 </html>
