typos in french

--- a/fr/index.html
+++ b/fr/index.html
@@ -35,7 +35,7 @@
       <h2 class="c-h2">A propos</h2>
       <div>
         <p>La Gare des Glaciers est un espace multi-usages à louer à Chamonix Mont-Blanc. Idéal pour les groupes, il possède un grand loft vitré et peut loger confortablement jusqu'à 25 personnes.</p>
-        <p>Construite pour les jeux olympique de 1924, la gare des glaciers était le premier téléphérique de l'aiguille du midi. Situé dans le quartier des pélerins, à 10 minutes du centre de Chamonix, ce bâtiment historique offre une vue exceptionnelle sur le glacier et le massif du Mont Blanc.</p>
+        <p>Construite pour les jeux olympiques de 1924, la Gare des Glaciers était le premier téléphérique de l'aiguille du midi. Situé dans le quartier des Pélerins, à 10 minutes du centre de Chamonix, ce bâtiment historique offre une vue exceptionnelle sur le glacier et le massif du Mont Blanc.</p>
       </div>
     </section>
 
