Fix language nav in French

--- a/fr/index.html
+++ b/fr/index.html
@@ -22,8 +22,8 @@
       <h1 class="c-siteheader__title">Gare <span>des</span> glaciers</h1>
       <nav class="c-siteheader__nav">
         <ul class="c-lggnav">
-          <li class="c-lggnav__item"><a class="c-lggnav__link" href="/en/">English</a></li>
-          <li class="c-lggnav__item"><a class="c-lggnav__link  is-active" href="/fr/">French</a></li>
+          <li class="c-lggnav__item"><a class="c-lggnav__link" href="/en/">Anglais</a></li>
+          <li class="c-lggnav__item"><a class="c-lggnav__link  is-active" href="/fr/">Français</a></li>
         </ul>
       </nav>
     </div>
