--- a/fr/index.html
+++ b/fr/index.html
@@ -29,31 +29,47 @@
     </div>
   </header>
 
-  <main class="c-maincontent  l-container">
+  <main>
 
-    <section class="l-splitted  c-contentsection">
-      <h2 class="c-h2">A propos</h2>
-      <div>
-        <p>La Gare des Glaciers est un espace multi-usages à louer à Chamonix Mont-Blanc. Idéal pour les groupes, il possède un grand loft vitré et peut loger confortablement jusqu'à 25 personnes.</p>
-        <p>Construite pour les jeux olympiques de 1924, la Gare des Glaciers était le premier téléphérique de l'aiguille du midi. Situé dans le quartier des Pélerins, à 10 minutes du centre de Chamonix, ce bâtiment historique offre une vue exceptionnelle sur le glacier et le massif du Mont Blanc.</p>
+    <div class="c-sitebanner">
+      <div class="l-container">
+        <img class="o-fluidimage"
+             src="../img/gare_des_glaciers_600.jpg"
+             srcset="../img/gare_des_glaciers_1500.jpg 1500w,
+                     ../img/gare_des_glaciers_1024.jpg 1024w,
+                     ../img/gare_des_glaciers_800.jpg 800w,
+                     ../img/gare_des_glaciers_600.jpg 600w"
+             sizes="(min-width: 1280px) 1280px,
+                    100vw"
+             alt="Gare des Glaciers">
       </div>
-    </section>
+    </div>
 
-    <section class="l-splitted  c-contentsection">
-      <h2 class="c-h2">Contact</h2>
-      <div>
-        <p>Contact rapide par email ou par téléphone. Réponse garantie dans les 24 heures.</p>
-        <p class="c-address">
-          <address>
-            Route des Pélerins, 1207<br>
-            74400 Chamonix Mont-Blanc<br>
-            <a href="mailto:info@garedesglaciers.com">info@garedesglaciers.com</a><br>
-            Téléphone: <a href="tel:0033668342328">+33 6 68342328</a><br>
-            <a href="https://goo.gl/maps/fGzUSXnREYzb89Jq9">Google maps</a>
-          </address>
-        </p>
-      </div>
-    </section>
+    <div class="c-maincontent  l-container">
+      <section class="l-splitted  c-contentsection">
+        <h2 class="c-h2">A propos</h2>
+        <div>
+          <p>La Gare des Glaciers est un espace multi-usages à louer à Chamonix Mont-Blanc. Idéal pour les groupes, il possède un grand loft vitré et peut loger confortablement jusqu'à 15 personnes.</p>
+          <p>Construite pour les jeux olympiques de 1924, la Gare des Glaciers était le premier téléphérique de l'aiguille du midi. Situé dans le quartier des Pélerins, à 10 minutes du centre de Chamonix, ce bâtiment historique offre une vue exceptionnelle sur le glacier et le massif du Mont Blanc.</p>
+        </div>
+      </section>
+
+      <section class="l-splitted  c-contentsection">
+        <h2 class="c-h2">Contact</h2>
+        <div>
+          <p>Contact rapide par email ou par téléphone. Réponse garantie dans les 24 heures.</p>
+          <p class="c-address">
+            <address>
+              Route des Pélerins, 1207<br>
+              74400 Chamonix Mont-Blanc<br>
+              <a href="mailto:info@garedesglaciers.com">info@garedesglaciers.com</a><br>
+              Téléphone: <a href="tel:0033668342328">+33 6 68342328</a><br>
+              <a href="https://goo.gl/maps/fGzUSXnREYzb89Jq9">Google maps</a>
+            </address>
+          </p>
+        </div>
+      </section>
+    </div>
   </main>
 
   <footer class="c-sitefooter">
