--- a/en/index.html
+++ b/en/index.html
@@ -29,31 +29,46 @@
     </div>
   </header>
 
-  <main class="c-maincontent  l-container">
+  <main>
 
-    <section class="l-splitted  c-contentsection">
-      <h2 class="c-h2">A propos</h2>
-      <div>
-        <p>The Gare des Glaciers is a multi-purpose space for rent in Chamonix Mont-Blanc, France. Ideal for group activities, it has a big loft area and can accomodate as many as 25 people to sleep.</p>
-        <p>Built for the olympic games in 1924, the Gare des Glaciers was the first cable-car station at the Aiguille du Midi. Located in the Pélerins area, you are only 10 minutes away from the city centre and have a unique view on Mont Blanc, the glacier and the sourrounding summits.</p>
+    <div class="c-sitebanner">
+      <div class="l-container">
+        <img class="o-fluidimage"
+             src="../img/gare_des_glaciers_600.jpg"
+             srcset="../img/gare_des_glaciers_1500.jpg 1500w,
+                     ../img/gare_des_glaciers_1024.jpg 1024w,
+                     ../img/gare_des_glaciers_800.jpg 800w,
+                     ../img/gare_des_glaciers_600.jpg 600w"
+             sizes="100vw"
+             alt="Gare des Glaciers">
       </div>
-    </section>
+    </div>
 
-    <section class="l-splitted  c-contentsection">
-      <h2 class="c-h2">Contact</h2>
-      <div>
-        <p>Contact us by email or by phone. We will be back to you within 24 hours.</p>
-        <p class="c-address">
-          <address>
-            Route des Pélerins, 1207<br>
-            74400 Chamonix Mont-Blanc<br>
-            <a href="mailto:info@garedesglaciers.com">info@garedesglaciers.com</a><br>
-            Téléphone: <a href="tel:0033668342328">+33 6 68342328</a><br>
-            <a href="https://goo.gl/maps/fGzUSXnREYzb89Jq9">Google maps</a>
-          </address>
-        </p>
-      </div>
-    </section>
+    <div class="c-maincontent  l-container">
+      <section class="l-splitted  c-contentsection">
+        <h2 class="c-h2">About</h2>
+        <div>
+          <p>The Gare des Glaciers is a multi-purpose space for rent in Chamonix Mont-Blanc, France. Ideal for group activities, it has a big loft area and can accomodate as many as 15 people overnight.</p>
+          <p>Built for the olympic games in 1924, the Gare des Glaciers was the first cable-car station at the Aiguille du Midi. Located in the Pélerins area, you are only 10 minutes away from the city centre and have a unique view on Mont Blanc, the glacier and the sourrounding summits.</p>
+        </div>
+      </section>
+
+      <section class="l-splitted  c-contentsection">
+        <h2 class="c-h2">Contact</h2>
+        <div>
+          <p>Contact us by email or by phone. We will be back to you within 24 hours.</p>
+          <p class="c-address">
+            <address>
+              Route des Pélerins, 1207<br>
+              74400 Chamonix Mont-Blanc<br>
+              <a href="mailto:info@garedesglaciers.com">info@garedesglaciers.com</a><br>
+              Téléphone: <a href="tel:0033668342328">+33 6 68342328</a><br>
+              <a href="https://goo.gl/maps/fGzUSXnREYzb89Jq9">Google maps</a>
+            </address>
+          </p>
+        </div>
+      </section>
+    </div>
   </main>
 
   <footer class="c-sitefooter">
